overflow x scroll fixed NB: it is come for aos

--- a/src/Components/Footer/FooterResponsive.css
+++ b/src/Components/Footer/FooterResponsive.css
@@ -1,6 +1,7 @@
 @media (max-width: 991px) {
     .footer-section {
         height: 750px;
+        overflow-x: hidden;
     }
 }
 
