--- a/src/Components/Hero/HeroResponsive.css
+++ b/src/Components/Hero/HeroResponsive.css
@@ -14,7 +14,7 @@
         height: 75vh;
     }
     .hero-section .content {
-        margin-top: 100px;
+        margin-top: 105px;
     }
     .search-area {
         margin-top: 20px;
