--- a/src/Components/News/NewsResponsive.css
+++ b/src/Components/News/NewsResponsive.css
@@ -29,7 +29,7 @@
 
 @media (max-width: 768px) {
     .news-section .card .news-photo {
-        height: 140px;
+        height: 120px;
     }
 
     .news-section .card .card-body {
