--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@ body {
     font-weight: normal;
     font-optical-sizing: auto;
     font-style: normal;
+
 }
-body{
+
+body {
     overflow-x: hidden;
 }
 
@@ -21,6 +23,7 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
+
 .myBtn {
     text-decoration: none;
     border: none;
@@ -40,3 +43,9 @@ body{
     background: linear-gradient(90deg, rgba(26, 26, 144, 1) 0%, rgba(57, 219, 212, 1) 91%);
     transition: .6s;
 }
+
+ /* @media (max-width: 768px) {
+    html {
+        overflow-x: hidden;
+    }
+}  */
